--- a/src/Olbrasoft.Data.Paging.X.PagedList/Olbrasoft.Data.Paging.X.PagedList.csproj
+++ b/src/Olbrasoft.Data.Paging.X.PagedList/Olbrasoft.Data.Paging.X.PagedList.csproj
@@ -1,13 +1,15 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Olbrasoft.Blog.Data\Olbrasoft.Blog.Data.csproj" />
+    <PackageReference Include="X.PagedList" Version="8.0.5" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Olbrasoft.Data.Paging\Olbrasoft.Data.Paging.csproj" />
-    <ProjectReference Include="..\Olbrasoft.Data\Olbrasoft.Data.csproj" />
   </ItemGroup>
 
 </Project>
