--- a/src/Olbrasoft.Data.Cqrs/Olbrasoft.Data.Cqrs.csproj
+++ b/src/Olbrasoft.Data.Cqrs/Olbrasoft.Data.Cqrs.csproj
@@ -11,8 +11,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Olbrasoft.Data.Paging\Olbrasoft.Data.Paging.csproj" />
     <ProjectReference Include="..\Olbrasoft.Data\Olbrasoft.Data.csproj" />
-    <ProjectReference Include="..\Olbrasoft.Paging\Olbrasoft.Paging.csproj" />
   </ItemGroup>
 
 </Project>
