--- a/src/Olbrasoft.Blog.AspNetCore.Mvc/Olbrasoft.Blog.AspNetCore.Mvc.csproj
+++ b/src/Olbrasoft.Blog.AspNetCore.Mvc/Olbrasoft.Blog.AspNetCore.Mvc.csproj
@@ -88,21 +88,25 @@
 
   <ItemGroup>
     <PackageReference Include="jQuery.Validation" Version="1.19.1" />
+    <PackageReference Include="LightInject.Microsoft.Hosting" Version="1.2.1" />
     <PackageReference Include="Markdown" Version="2.2.1" />
-    <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="3.1.2" />
-    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.2" />
-    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.1.2" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.2" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.2" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.2">
+    <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="3.1.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.1.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.3">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="3.1.2" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="3.1.3" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
     <PackageReference Include="Olbrasoft.Data.Paging.X.PagedList.AspNetCore.Mvc" Version="1.0.1" />
     <PackageReference Include="Olbrasoft.Dispatching.DependencyInjection.Microsoft" Version="1.0.5" />
     <PackageReference Include="Olbrasoft.Mapping.Mapster.DependencyInjection.Microsoft" Version="1.0.2" />
+    <PackageReference Include="Olbrasoft.Text.Transformation.Markdown" Version="1.0.1" />
+    <PackageReference Include="Singularity.AspNetCore.Hosting" Version="0.17.4" />
+    <PackageReference Include="Singularity.AspNetCore.MVC" Version="0.17.4" />
     <PackageReference Include="X.PagedList.Mvc.Core" Version="8.0.5" />
   </ItemGroup>
 
@@ -114,7 +118,6 @@
     <ProjectReference Include="..\Olbrasoft.Data.Paging\Olbrasoft.Data.Paging.csproj" />
     <ProjectReference Include="..\Olbrasoft.Data\Olbrasoft.Data.csproj" />
     <ProjectReference Include="..\Olbrasoft.Linq\Olbrasoft.Linq.csproj" />
-    <ProjectReference Include="..\Olbrasoft.Text.Transformation\Olbrasoft.Text.Transformation.csproj" />
   </ItemGroup>
 
   <ItemGroup>
