--- a/src/Olbrasoft.Blog.AspNetCore.Mvc/Olbrasoft.Blog.AspNetCore.Mvc.csproj
+++ b/src/Olbrasoft.Blog.AspNetCore.Mvc/Olbrasoft.Blog.AspNetCore.Mvc.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <UserSecretsId>aspnet-Olbrasoft.Blog.AspNetCore.Mvc-9296B2B1-2E82-45BC-81DC-AD5A56934A33</UserSecretsId>
   </PropertyGroup>
 
@@ -106,24 +106,20 @@
 
   <ItemGroup>
     <PackageReference Include="jQuery.Validation" Version="1.19.2" />
-    <PackageReference Include="LightInject.Microsoft.Hosting" Version="1.2.2" />
+    <PackageReference Include="LightInject.Microsoft.Hosting" Version="1.2.5" />
     <PackageReference Include="Localization.AspNetCore.TagHelpers" Version="0.6.0" />
     <PackageReference Include="Markdown" Version="2.2.1" />
-    <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="3.1.8" />
-    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.8" />
-    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.1.8" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.8" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.8" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.8">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="3.1.8" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
+    <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="5.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="5.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="5.0.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.0" />
     <PackageReference Include="Olbrasoft.Data.Paging.DataTables" Version="1.0.1" />
     <PackageReference Include="Olbrasoft.Data.Paging.X.PagedList" Version="1.0.2" />
     <PackageReference Include="Olbrasoft.Data.Paging.X.PagedList.AspNetCore.Mvc" Version="1.0.2" />
-    <PackageReference Include="Olbrasoft.Dispatching.WithExecutor.DependencyInjection.Microsoft" Version="1.0.0" />
+    <PackageReference Include="Olbrasoft.Dispatching.WithExecutor.DependencyInjection.Microsoft" Version="1.0.4" />
     <PackageReference Include="Olbrasoft.Extensions" Version="1.0.5" />
     <PackageReference Include="Olbrasoft.Linq" Version="1.0.0" />
     <PackageReference Include="Olbrasoft.Mapping.Mapster.DependencyInjection.Microsoft" Version="1.0.2" />
