--- a/test/Olbrasoft.Blog.AspNetCore.Mvc.Tests/Olbrasoft.Blog.AspNetCore.Mvc.Tests.csproj
+++ b/test/Olbrasoft.Blog.AspNetCore.Mvc.Tests/Olbrasoft.Blog.AspNetCore.Mvc.Tests.csproj
@@ -1,11 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
 
     <IsPackable>false</IsPackable>
 
     <RootNamespace>Olbrasoft.Blog.AspNetCore.Mvc</RootNamespace>
+
+    <OutputType>Library</OutputType>
   </PropertyGroup>
 
   <ItemGroup>
@@ -22,7 +24,5 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Olbrasoft.Blog.AspNetCore.Mvc\Olbrasoft.Blog.AspNetCore.Mvc.csproj" />
-    <ProjectReference Include="..\..\src\Olbrasoft.Mapping.AutoMapper\Olbrasoft.Mapping.AutoMapper.csproj" />
   </ItemGroup>
-
 </Project>
