--- a/test/Olbrasoft.Blog.Data.Tests/Olbrasoft.Blog.Data.Tests.csproj
+++ b/test/Olbrasoft.Blog.Data.Tests/Olbrasoft.Blog.Data.Tests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
 
     <IsPackable>false</IsPackable>
 
@@ -9,9 +9,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MediatR" Version="8.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
+    <PackageReference Include="Moq" Version="4.15.1" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
       <PrivateAssets>all</PrivateAssets>
@@ -22,7 +22,5 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Olbrasoft.Blog.Data\Olbrasoft.Blog.Data.csproj" />
-    <ProjectReference Include="..\..\src\Olbrasoft.Paging\Olbrasoft.Paging.csproj" />
   </ItemGroup>
-
 </Project>
