--- a/src/Olbrasoft.Blog.AspNetCore.Mvc/Olbrasoft.Blog.AspNetCore.Mvc.csproj
+++ b/src/Olbrasoft.Blog.AspNetCore.Mvc/Olbrasoft.Blog.AspNetCore.Mvc.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
+	  <LangVersion>10</LangVersion>
     <UserSecretsId>aspnet-Olbrasoft.Blog.AspNetCore.Mvc-9296B2B1-2E82-45BC-81DC-AD5A56934A33</UserSecretsId>
   </PropertyGroup>
 
@@ -14,6 +15,10 @@
     <EmbeddedResource Remove="Profiles\**" />
     <None Remove="Areas\Administration\Views\Home\vendor\**" />
     <None Remove="Profiles\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Remove="SharedLocalizer.cs" />
   </ItemGroup>
 
   <ItemGroup>
@@ -109,22 +114,22 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="FreeSql.DbContext" Version="3.2.680" />
-    <PackageReference Include="FreeSql.Provider.SqlServer" Version="3.2.680" />
+    <PackageReference Include="FreeSql.DbContext" Version="3.2.681" />
+    <PackageReference Include="FreeSql.Provider.SqlServer" Version="3.2.681" />
     <PackageReference Include="Grace.AspNetCore.Hosting" Version="7.1.0" />
     <PackageReference Include="Grace.AspNetCore.MVC" Version="7.1.0" />
     <PackageReference Include="jQuery.Validation" Version="1.19.5" />
-    <PackageReference Include="LightInject.Microsoft.Hosting" Version="1.3.0" />
+    <PackageReference Include="LightInject.Microsoft.Hosting" Version="1.5.0" />
     <PackageReference Include="Localization.AspNetCore.TagHelpers" Version="0.6.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="6.0.8" />
-    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.8" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="6.0.8" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.8">
+    <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="6.0.10" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.10" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="6.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.10">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <TreatAsUsed>true</TreatAsUsed>
     </PackageReference>
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.8" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.10" />
     <PackageReference Include="Olbrasoft.Data.Paging.DataTables" Version="1.0.2" />
     <PackageReference Include="Olbrasoft.Data.Paging.X.PagedList" Version="1.0.4" />
     <PackageReference Include="Olbrasoft.Data.Paging.X.PagedList.AspNetCore.Mvc" Version="1.0.6" />
@@ -153,15 +158,18 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Update="Resources\Areas\Administration\Views\Categories\Index.cs.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Resources\Controllers\HomeController.cs.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="Resources\Shared.cs.resx">
+    <EmbeddedResource Update="Resources\SharedResources.cs.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="Resources\Shared.resx">
+    <EmbeddedResource Update="Resources\SharedResources.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
-      <LastGenOutput>Shared.Designer.cs</LastGenOutput>
+      <LastGenOutput>SharedResources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Update="Resources\Views\Home\Index.cs.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
@@ -179,10 +187,34 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Update="Resources\Shared.Designer.cs">
+    <Compile Update="Resources\SharedResources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
-      <DependentUpon>Shared.resx</DependentUpon>
+      <DependentUpon>SharedResources.resx</DependentUpon>
     </Compile>
   </ItemGroup>
+
+	<ItemGroup>
+		<Using Include="System"/>
+		<Using Include="System.Linq"/>
+		<Using Include="System.Threading"/>
+		<Using Include="System.Threading.Tasks"/>
+		<Using Include="System.Collections.Generic"/>
+		<Using Include="System.ComponentModel.DataAnnotations"/>
+		<Using Include="Microsoft.AspNetCore.Mvc"/>
+		<Using Include="Microsoft.EntityFrameworkCore"/>
+		<Using Include="Microsoft.AspNetCore.Authorization"/>
+		<Using Include="X.PagedList"/>
+		<Using Include="Olbrasoft.Data.Cqrs"/>
+		<Using Include="Olbrasoft.Dispatching"/>
+		<Using Include="Olbrasoft.Data.Paging"/>
+		<Using Include="Olbrasoft.Blog.Business"/>
+		<Using Include="Olbrasoft.Blog.Data.Dtos.TagDtos"/>
+		<Using Include="Olbrasoft.Data.Paging.DataTables"/>
+		<Using Include="Olbrasoft.Blog.Data.Dtos.PostDtos"/>
+		<Using Include="Olbrasoft.Blog.Data.Dtos.CategoryDtos"/>
+		<Using Include="Olbrasoft.Blog.Data.Entities.Identity"/>
+		<Using Include="Olbrasoft.Blog.AspNetCore.Mvc.Controllers"/>
+		<Using Include="Olbrasoft.Blog.AspNetCore.Mvc.Areas.Administration.Models"/>
+	</ItemGroup>
 </Project>
