Extract base DbCommandHandler and DbQueryHanbdler

--- a/src/Olbrasoft.Blog.AspNetCore.Mvc/appsettings.Development.json
+++ b/src/Olbrasoft.Blog.AspNetCore.Mvc/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "BlogDbConnectionString": "Server=.; Database=Blog; Trusted_Connection=True; MultipleActiveResultSets=true"
+    "BlogDbConnectionString": "Server=.; Database=Blog; Trusted_Connection=True; MultipleActiveResultSets=true;encrypt=false"
   },
 
   "Logging": {
