--- a/src/Olbrasoft.Blog.Data.EntityFrameworkCore/Olbrasoft.Blog.Data.EntityFrameworkCore.csproj
+++ b/src/Olbrasoft.Blog.Data.EntityFrameworkCore/Olbrasoft.Blog.Data.EntityFrameworkCore.csproj
@@ -22,21 +22,22 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.0" />
 	
 	  <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.10" />
 	
-	  <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.10">
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.0">
 	    <PrivateAssets>all</PrivateAssets>
 	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	  </PackageReference>
-    <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="6.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
     <PackageReference Include="Olbrasoft.Data.Sorting.Extensions" Version="1.0.1" />
     <PackageReference Include="Olbrasoft.Mapping.Abstractions" Version="7.3.2" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\Data\src\Data.Cqrs.EntityFrameworkCore\Data.Cqrs.EntityFrameworkCore.csproj" />
     <ProjectReference Include="..\Olbrasoft.Blog.Data\Olbrasoft.Blog.Data.csproj" />
   </ItemGroup>
 
@@ -67,6 +68,7 @@
 		<Using Include="Olbrasoft.Data.Paging" />
 		<Using Include="Olbrasoft.Extensions.Paging" />
 		<Using Include="Olbrasoft.Extensions.Linq" />
+		<Using Include="Olbrasoft.Data.Cqrs.EntityFrameworkCore"/>
 	</ItemGroup>
 
 	<ItemGroup>
